# kunipa-securedb

./: CLAUDE.md  Cargo.toml  README.md  conn.go  doc.go  driver.go  errors.go  go.mod  result.go  rows.go  securedb.c  securedb.go  securedb.h  securedb_test.go  stmt.go  tx.go  verify.go
.github/workflows/: ci.yml
docs/: adr-rust-reimplementation.md
docs/TODO/: audit-2026-03-26.md  downstream-and-external.md  rust-migration-and-ci.md  watch-runtime-secret.md
docs/TODO/archived/: audit-low-priority.md  reimplementation_guidee.md  rust-branch-merge-and-downstream.md  rust-reimplementation.md
docs/TODO/audits/: audit-post-merge-2026-03-30.md  audit-reimplementation.md  audit-rust-reimplementation.md  audit-security-rust-2026-03-30.md
docs/archived/: audit-2026-03-26.md
src/: connection.rs  error.rs  lib.rs  options.rs  verify.rs
tests/: integration.rs
